src/test/vm/exceptions.php.exp
bar 0
caught 1
bar 1
bar 2
caught 2
before
caught
caught exception
bar 3
caught 3
HipHop Fatal error: Uncaught exception exception 'Ex3' with message '' in src/test/vm/exceptions.php:21
Stack trace:
#0 (): bar()
#1 src/test/vm/exceptions.php(28): call_user_func()
#2 src/test/vm/exceptions.php(35): foo2()
#3 src/test/vm/exceptions.php(39): foo1()
#4 (): foo()
#5 src/test/vm/exceptions.php(77): array_map()
#6 {main}
